--- a/WebContent/css/user/QnA.css
+++ b/WebContent/css/user/QnA.css
@@ -1,61 +1,114 @@
-* {
-    box-sizing: border-box;
-}
+
 .d-none{
     display: none;
 }
-.header_h1{
-    flex-basis: 50px;
-    height:70%;
-    background: url("../../틈로고.png") 0 0 no-repeat;
-    text-indent: -9999px;
-    background-size: 50px auto;
-}
-.img-btn{
-    border: none;
-    background: none;
-}
+
 /********************************************/
 
 .container {
     width: 1200px;
-    min-height: 100px;
-    --background: orange;
+    min-height: 500px;
     margin: 0 auto;
     display: flex;
+     padding-top: 30px;
 }
+ .aside {
+            width: 300px;
+            height: 330px;
+            margin-top: 70px;
+            padding-left: 40px;
+        }
 
-    .aside {
-        background: palegreen;
-        width: 300px;
-    }
+            .aside > h1 {
+                font-size: 24px;
+                font-weight: bold;
+                padding: 10px 0 0 20px;
+            }
 
+            .aside > ul {
+                width: 200px;
+                padding: 10px 0 0 40px;
+            }
+
+            .aside li {
+                height:60px;
+                padding-top: 20px;
+                padding-bottom: 10px;
+                font-size: 20px;
+                transform: scale(1);
+                transition: transform 0.1s;
+                
+            }
+            .aside li:hover {
+                border-bottom:1px solid #fc0453;
+                transform: scale(1.03);
+                color:#fc0453;
+                font-weight: bold;
+            }
+
+            .aside .active {
+                font-weight: bold;
+                color: #fc0453;
+            }
+
+                .aside li > a {
+                    text-decoration: none;
+                }
     .main {
         width: 900px;
         min-height: 500px;
-        
+        padding: 0 40px;
+            margin-bottom: 50px;
     }
-        .breadcrumb {
-            width: 100%;
-        }
-            .breadcrumb>ul{
+       .breadcrumb > .breadcrumb-list {
                 display: flex;
                 justify-content: flex-end;
+                font-size: 12px;
             }
 
-        .qna-sec {
-            width: 900px;
-            height: 600px;
-            border: 1px solid black;
-            display: flex;
-            align-items: center;
-            flex-direction: column;
+      .qna-sec >h1 {
+       		width: 100%;
+            font-weight: bold;
+            font-size: 28px;
+            margin: 30px 0 30px 0;
+            --border-bottom:4px solid #000000;
+            padding-bottom:30px;
             
         }
-        .qna-sec section{
-            width: 600px;
+        .qna-sec >h1 span{
+         font-size: 20px;
+         font-weight: normal;
         }
-            .change-tap-list{
+        .qna-sec >.change-tap> .change-list {
+                display: flex;
+                color: #888888;
+            }
+
+                .qna-sec >.change-tap> .change-list > li {
+                    border: 1px solid #c5c7c9;
+                    flex-grow: 1;
+                    text-align: center;
+                    height: 40px;
+                    line-height: 40px;
+                    background: #F2F2F8;
+                }
+
+                    .qna-sec >.change-tap> .change-list > li > a {
+                        display: block;
+                    }
+
+                .qna-sec >.change-tap> .change-list > .current-tab {
+                    border-top: 3px solid #FC0453;
+                    --border-right: 1px solid #FC0453;
+                    --border-left: 1px solid #FC0453;
+                    border-bottom: none;
+                    background: #FFFFFF;
+                }
+
+                    .qna-sec >.change-tap> .change-list > li > a {
+                        text-decoration: none;
+                    }
+            .qna-list{
                 display: flex;
                 flex-direction: row;
             }
@@ -75,11 +128,11 @@
                 }
         .qna-list {
             min-height: 300px;
-           border-top: 1px solid gray;
+          
             
         }
             .qna-list ol{
-                min-height: 200px; /* 컨텐츠 크기에 따른 높이 변화 */
+                min-height: 200px; 
                 display: flex;
                 flex-flow: column wrap;
                 align-items: center;                
