--- a/WebContent/css/user/userInfo/memberInfo.css
+++ b/WebContent/css/user/userInfo/memberInfo.css
@@ -69,24 +69,28 @@
                 font-size: 12px;
             }
 
-            .offer-list-sec>h1{
+            .member-info-sec>h1{
                 width: 500px;
                 font-weight: bold;
                 font-size: 28px;
                 margin: 50px 0 30px 0;
             }
-            
-            .offer-list-sec>ul>li{
-                
+            .member-info-sec>div:nth-child(2){
+                margin-top: 100px;
+                display: flex;
+                align-items: flex-end;
             }
-                .offer-list-sec>ul>li>table{
-                    width: 800px;
-                    --border: 1px solid gray;
-                    text-align: center;
+                .member-info-sec>div:nth-child(2)>p:first-child{
+                    font-size: 20px;
                 }
-                .offer-list-sec>ul>li>table td{
-                    text-align: center;
+                .member-info-sec>div:nth-child(2)>p:last-child{
+                    font-size: 12px;
+                    color: gray;
                 }
+            .member-info-sec>div:nth-child(3){
+                margin-top: 10px;
+            }
+            
 
 
 
