--- a/WebContent/css/admin/index.css
+++ b/WebContent/css/admin/index.css
@@ -2,11 +2,15 @@
     box-sizing: border-box;
 }
 
+/* .container-sec {
+    background: #F9FBFF;
+} */
+
 /******************************/
-.header {
+/* .header {
     height: 100px;
     background: #5F0080;
-}
+} */
 
 /******************************/
 .container {
