--- a/WebContent/css/company/reverseOffer/reg.css
+++ b/WebContent/css/company/reverseOffer/reg.css
@@ -227,6 +227,7 @@
                                 .offer-img-container img {
                                     width: 370px;
                                     height: 220px;
+                                    border: 1px solid rgb(199, 199, 199);
                                 }
 
                             .offer-detail-container {
