--- a/WebContent/css/company/reverseOffer/reg.css
+++ b/WebContent/css/company/reverseOffer/reg.css
@@ -86,6 +86,7 @@
                     z-index: 5;
                     font-size: 40px;
                     opacity: 0.2;
+                    --border: 1px solid red;
                 }
 
                 .proposal-sec .cliper-btn {
@@ -93,18 +94,19 @@
                 }
 
                 .proposal-sec .prev-btn {
-                    top: 90px;
+                    top: 110px;
                 }
 
                 .proposal-sec .next-btn {
-                    top: 90px;
+                    top: 110px;
                     right: 0;
                 }
-
-                .proposal-sec > .proposal-container {
+            
+                .proposal-sec .proposal-container {
                     display: flex;
                     justify-content: space-evenly;
                     margin-top: 20px;
+                    --border: 1px solid red;
                 }
 
                     .proposal-container > .proposal-info {
@@ -215,7 +217,7 @@
                         }
 
                             .offer-img-container {
-                                margin: 10px auto;
+                                margin: 10px 0 5px 0;
                                 transform: scale(1);
                                 transition: transform 0.2s;
                             }
@@ -237,52 +239,86 @@
                             }
 
                             .offer-detail-container .offer-room {
-                                --border: 1px solid red;
-                                margin-top: 10px;
-                                --display: inline-block;
+                                font-size: 20px;
+                                font-weight: bold;
                                 position: absolute;
+                                top: 10px;
                             }
 
-                            .offer-detail-container .offer-price {
-                                --display: flex;
-                                --display: inline-block;
+                            .offer-detail-container .offer-bed-count {
                                 margin-top: 30px;
                             }
 
-                            .offer-detail-container .offer-price > div:nth-child(1) {
-                                --border: 1px solid blue;
-                                margin-top: 40px;
-                                --flex-basis: 200px;
-                                --flex-grow: 1;
-                                position: absolute;
-                                top: 70px;
+                                .offer-detail-container .offer-bed-count > div:nth-child(1) {
+                                    position: absolute;
+                                    top: 55px;
+                                }
+
+                                .offer-detail-container .offer-bed-count > div:nth-child(2) {
+                                    flex-grow: 0;
+                                    margin-right: 10px;
+                                    position: absolute;
+                                    top: 55px;
+                                    right: 10px;
+                                }
+
+                            .offer-detail-container .offer-max-headcount {
+                                margin-top: 30px;
                             }
 
-                            .offer-detail-container .offer-price > div:nth-child(2) {
-                                --border: 1px solid green;
-                                margin-top: 40px;
-                                flex-grow: 0;
-                                margin-right: 10px;
-                                position: absolute;
-                                top: 70px;
-                                right: 10px;
+                                .offer-detail-container .offer-max-headcount > div:nth-child(1) {
+                                    position: absolute;
+                                    top: 95px;
+                                }
+
+                                .offer-detail-container .offer-max-headcount > div:nth-child(2) {
+                                    flex-grow: 0;
+                                    margin-right: 10px;
+                                    position: absolute;
+                                    top: 95px;
+                                    right: 10px;
+                                }
+
+                            .offer-detail-container .offer-price {
+                                margin-top: 30px;
                             }
 
+                                .offer-detail-container .offer-price > div:nth-child(1) {
+                                    --flex-basis: 200px;
+                                    --flex-grow: 1;
+                                    position: absolute;
+                                    top: 135px;
+                                }
 
-                            .offer-detail-container .offer-detail-link {
-                                --border: 1px solid red;
-                                margin-top: 80px;
-                                --display: inline-block;
+                                .offer-detail-container .offer-price > div:nth-child(2) {
+                                    flex-grow: 0;
+                                    margin-right: 10px;
+                                    position: absolute;
+                                    top: 135px;
+                                    right: 10px;
+                                }
+
+                            .offer-detail-container .highlight-btn {
                                 position: absolute;
-                                top: 120px;
+                                width: 400px;
+                                height: 40px;
+                                top: 189px;
+                                border: none;
+                                border-radius: 5px;
+                                background: #fc0453;
+                                color: white;
+                                --font-weight: bold;
+                                opacity: 0.8;
                             }
 
                             .offer-form > .submit-btn-container  {
-                                margin: 20px auto 100px auto;
+                                margin: 50px auto 100px auto;
+                                width: 100%;
+                                text-align: center;
                             }
 
                             .offer-form > .submit-btn-container > .submit-btn {
-                                background-color: #fc0453;
+                                background: #fc0453;
                                 border: 1px solid #fc0453;
                                 border-radius: 28px;
                                 cursor: pointer;
