--- a/WebContent/css/user/userInfo/proposalList.css
+++ b/WebContent/css/user/userInfo/proposalList.css
@@ -157,7 +157,7 @@
                     width: 500px;
                     font-weight: bold;
                     font-size: 24px;
-                    margin-left: 30px;
+                    --margin-left: 30px;
                 }
 
                 .offer-form {
@@ -217,7 +217,7 @@
                         }
 
                             .offer-img-container {
-                                margin: 10px auto;
+                                margin: 10px 0 5px -10px;
                                 transform: scale(1);
                                 transition: transform 0.2s;
                             }
@@ -238,44 +238,75 @@
                             }
 
                             .offer-detail-container .offer-room {
-                                --border: 1px solid red;
-                                margin-top: 10px;
-                                --display: inline-block;
+                                font-size: 20px;
+                                font-weight: bold;
                                 position: absolute;
+                                top: 10px;
                             }
+
+                            .offer-detail-container .offer-bed-count {
+                                margin-top: 30px;
+                            }
+
+                                .offer-detail-container .offer-bed-count > div:nth-child(1) {
+                                    position: absolute;
+                                    top: 55px;
+                                }
+
+                                .offer-detail-container .offer-bed-count > div:nth-child(2) {
+                                    flex-grow: 0;
+                                    margin-right: 10px;
+                                    position: absolute;
+                                    top: 55px;
+                                    right: 10px;
+                                }
+
+                            .offer-detail-container .offer-max-headcount {
+                                margin-top: 30px;
+                            }
+
+                                .offer-detail-container .offer-max-headcount > div:nth-child(1) {
+                                    position: absolute;
+                                    top: 95px;
+                                }
+
+                                .offer-detail-container .offer-max-headcount > div:nth-child(2) {
+                                    flex-grow: 0;
+                                    margin-right: 10px;
+                                    position: absolute;
+                                    top: 95px;
+                                    right: 10px;
+                                }
 
                             .offer-detail-container .offer-price {
-                                --display: flex;
-                                --display: inline-block;
-                                /* margin-top: 30px; */
+                                margin-top: 30px;
                             }
 
-                            .offer-detail-container .offer-price > div:nth-child(1) {
-                                --border: 1px solid blue;
-                                --margin-top:5px;
-                                --flex-basis: 200px;
-                                --flex-grow: 1;
-                                position: absolute;
-                                top: 70px;
-                            }
+                                .offer-detail-container .offer-price > div:nth-child(1) {
+                                    --flex-basis: 200px;
+                                    --flex-grow: 1;
+                                    position: absolute;
+                                    top: 135px;
+                                }
 
-                            .offer-detail-container .offer-price > div:nth-child(2) {
-                                --border: 1px solid green;
-                                --margin-top: 5px;
-                                flex-grow: 0;
-                                margin-right: 10px;
-                                position: absolute;
-                                top: 70px;
-                                right: 10px;
-                            }
+                                .offer-detail-container .offer-price > div:nth-child(2) {
+                                    flex-grow: 0;
+                                    margin-right: 10px;
+                                    position: absolute;
+                                    top: 135px;
+                                    right: 10px;
+                                }
 
-
-                            .offer-detail-container .offer-detail-link {
-                                --border: 1px solid red;
-                                --margin-top: 20px;
-                                --display: inline-block;
+                            .offer-detail-container .submit-btn {
                                 position: absolute;
-                                top: 120px;
+                                width: 400px;
+                                height: 40px;
+                                top: 189px;
+                                border: none;
+                                border-radius: 5px;
+                                background: #fc0453;
+                                color: white;
+                                --font-weight: bold;
                             }
                             
                             .offer-form  .submit-btn-container > .submit-btn {
@@ -285,7 +316,6 @@
                                 --border-radius: 28px;
                                 cursor: pointer;
                                 color: #ffffff;
-                                padding: 16px 60px;
                                 position: absolute;
                                 bottom: 20px;
                             }
